<resources>
    <string name="app_name">DEINFO - Helpdesk</string>
    <string name="course_bcc">BCC - Bacharelado em Ciência da Computação</string>
    <string name="course_bsi">BSI - Bacharelado em Sistema de Informação</string>
    <string name="course_lc">LC - Licenciatura em Computação</string>
    <string name="str_course">Course</string>
    <string name="str_student">Student</string>
    <string name="str_request">Resquest</string>
    <string name="str_send">Send</string>
    <string name="str_select">Select</string>
    <string name="str_resume">Resume of your request</string>


    <!-- String array usando outras strings como elementos -->
    <string-array name="courses">
        <item>@string/course_bcc</item>
        <item>@string/course_bsi</item>
        <item>@string/course_lc</item>
    </string-array>

</resources>
