<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CourseActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/rgCourses">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_bcc"
            android:id="@+id/rbBCC"
            android:checked="true" />

        <RadioButton
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:text="@string/course_bsi"
            android:id="@+id/rbBSI"
            android:checked="false" />

        <RadioButton
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:text="@string/course_lc"
            android:id="@+id/rbLC"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_select"
        android:id="@+id/btnSelect"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/rgCourses"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
